Tue Feb 21 21:14:22 GMT 2006  Olly Betts <olly@survex.com>

	* include/xapian/deprecated.h: Allow xapian-bindings to override
	  deprecation warnings.

Tue Feb 21 17:55:17 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Note that "flicklock" should be
	  "flintlock"!

Tue Feb 21 14:13:08 GMT 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated.

Tue Feb 21 14:12:47 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING: Update the "how to do a release" list.

Tue Feb 21 00:17:40 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Updated for 0.9.4.

Mon Feb 20 21:15:46 GMT 2006  Olly Betts <olly@survex.com>

	* api/omdocument.cc,api/omenquire.cc,api/omquery.cc,include/xapian/,
	  queryparser/queryparser.cc: GCC 3.2 actually doesn't like
	  __attribute__((deprecated)) on method definitions, so just
	  put declarations of deprecated methods in the headers, and
	  move definitions into the library.

Mon Feb 20 16:04:33 GMT 2006  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc,tests/api_db.cc,tests/api_nodb.cc: Update uses
	  of deprecated methods and functions.

Mon Feb 20 15:47:31 GMT 2006  Olly Betts <olly@survex.com>

	* include/xapian/document.h: __attribute__((deprecated)) doesn't
	  work on method definitions with default parameters on GCC 3.2
	  so fix header to overload instead.

Mon Feb 20 13:44:14 GMT 2006  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Add documentation comment for
	  Enquire::set_sort_by_value_then_relevance().

Sun Feb 19 23:18:09 GMT 2006  Olly Betts <olly@survex.com>

	* include/Makefile.am,include/xapian/: Flag deprecated methods such
	  that the compiler gives a warning, for compilers which support
	  such a feature.

Sun Feb 19 22:58:55 GMT 2006  Olly Betts <olly@survex.com>

	* COPYING: Update second occurrence of old FSF address.

Sun Feb 19 22:46:49 GMT 2006  Olly Betts <olly@survex.com>

	* README: Add pointer to HACKING.  Change "CVS access" to "SVN
	  access".
